--- a/editlist.html
+++ b/editlist.html
@@ -40,7 +40,7 @@
         <header class="app-header">
             <div class="hamburg-logo-div">
                 <i class="fa-solid fa-bars fa-3x hamburg-menu" style="color: #ffffff;"></i>
-                <img src="/media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
+                <img src="media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
             </div>
         </header>
     </div>
@@ -58,7 +58,7 @@
 
     <!--User List Div-->
     <div class="list-img-div">
-        <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="create-list-img" id="pfp-img" alt="">
+        <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="create-list-img" id="pfp-img" alt="">
         <div class="list-img-edit fa-stack" id="change-pfp-icon">
             <input type="file" id="pfp-input">
             <i class="fa fa-circle fa-stack-2x" style="color: rgb(255, 255, 255);"></i>
@@ -79,7 +79,7 @@
         <div class="user-ride-item">
             <!--Ride Image Div-->
             <div class="list-ride-img-div">
-                <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
             </div>
             <!--Ride Data Div-->
             <div class="list-ride-data-div">
@@ -125,7 +125,7 @@
         <div class="user-ride-item">
             <!--Ride Image Div-->
             <div class="list-ride-img-div">
-                <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
             </div>
             <!--Ride Data Div-->
             <div class="list-ride-data-div">
@@ -171,7 +171,7 @@
         <div class="user-ride-item">
             <!--Ride Image Div-->
             <div class="list-ride-img-div">
-                <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
             </div>
             <!--Ride Data Div-->
             <div class="list-ride-data-div">
@@ -217,7 +217,7 @@
         <div class="user-ride-item">
             <!--Ride Image Div-->
             <div class="list-ride-img-div">
-                <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
             </div>
             <!--Ride Data Div-->
             <div class="list-ride-data-div">
@@ -264,7 +264,7 @@
         <div class="user-ride-item">
             <!--Ride Image Div-->
             <div class="list-ride-img-div">
-                <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
             </div>
             <!--Ride Data Div-->
             <div class="list-ride-data-div">
@@ -311,7 +311,7 @@
         <div class="user-ride-item">
             <!--Ride Image Div-->
             <div class="list-ride-img-div">
-                <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
             </div>
             <!--Ride Data Div-->
             <div class="list-ride-data-div">
@@ -358,7 +358,7 @@
         <div class="user-ride-item">
             <!--Ride Image Div-->
             <div class="list-ride-img-div">
-                <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
             </div>
             <!--Ride Data Div-->
             <div class="list-ride-data-div">
@@ -423,11 +423,11 @@
                 <span>PROFILE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/compare.png" class="icon-img">
+                <img src="media/imgs/compare.png" class="icon-img">
                 <span>COMPARE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/rides.png" class="icon-img">
+                <img src="media/imgs/rides.png" class="icon-img">
                 <span>RIDES</span>
             </div>
         </div>
