--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body style="background-color:black">
     <div class="welcome-logo">
-        <img src="/media/imgs/logo-nav.png" alt="RideRaters Logo" class="welcome-logo-img">
+        <img src="media/imgs/logo-nav.png" alt="RideRaters Logo" class="welcome-logo-img">
     </div>
     <div class="welcome-text-div">
         <h1 class="welcome-text">Welcome!</h1>
