--- a/profile.html
+++ b/profile.html
@@ -51,7 +51,7 @@
         <header class="app-header">
             <div class="hamburg-logo-div">
                 <i class="fa-solid fa-bars fa-3x hamburg-menu" style="color: #ffffff;"></i>
-                <img src="/media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
+                <img src="media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
             </div>
         </header>
     </div>
@@ -72,7 +72,7 @@
     </div>
     <!--Profile Picture-->
     <div class="profile-pic-div">
-        <img src="/media/imgs/profile-pic.jpg" class="profile-pic" alt="Profile Picture">
+        <img src="media/imgs/profile-pic.jpg" class="profile-pic" alt="Profile Picture">
     </div>
     <!--Username-->
     <p class="username-txt proxima-bold">USERNAME123</p>
@@ -88,27 +88,27 @@
         <div class="user-lists-div">
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST ONE</p>
-                <img src="/media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
             </div>
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST TWO</p>
-                <img src="/media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
             </div>
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST THREE</p>
-                <img src="/media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
             </div>
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST FOUR</p>
-                <img src="/media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
             </div>
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST FIVE</p>
-                <img src="/media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
             </div>
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST SIX</p>
-                <img src="/media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
             </div>
         </div>
     </div>
@@ -129,11 +129,11 @@
                 <span>PROFILE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/compare.png" class="icon-img">
+                <img src="media/imgs/compare.png" class="icon-img">
                 <span>COMPARE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/rides.png" class="icon-img">
+                <img src="media/imgs/rides.png" class="icon-img">
                 <span>RIDES</span>
             </div>
         </div>
