--- a/review.html
+++ b/review.html
@@ -170,7 +170,7 @@
         <header class="app-header">
             <div class="hamburg-logo-div">
                 <i class="fa-solid fa-bars fa-3x hamburg-menu" style="color: #ffffff;"></i>
-                <img src="/media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
+                <img src="media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
             </div>
         </header>
     </div>
@@ -273,11 +273,11 @@
                 <span>PROFILE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/compare.png" class="icon-img">
+                <img src="media/imgs/compare.png" class="icon-img">
                 <span>COMPARE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/rides.png" class="icon-img">
+                <img src="media/imgs/rides.png" class="icon-img">
                 <span>RIDES</span>
             </div>
         </div>
