--- a/ridespage.html
+++ b/ridespage.html
@@ -40,7 +40,7 @@
         <header class="app-header">
             <div class="hamburg-logo-div">
                 <i class="fa-solid fa-bars fa-3x hamburg-menu" style="color: #ffffff;"></i>
-                <img src="/media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
+                <img src="media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
             </div>
         </header>
     </div>
@@ -78,7 +78,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -128,7 +128,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -178,7 +178,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -228,7 +228,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -278,7 +278,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -328,7 +328,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -395,11 +395,11 @@
                 <span>PROFILE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/compare.png" class="icon-img">
+                <img src="media/imgs/compare.png" class="icon-img">
                 <span>COMPARE</span>
             </div>
             <div class="icon-text-container icon-color">
-                <img src="/media/imgs/rides-blue.png" class="icon-img">
+                <img src="media/imgs/rides-blue.png" class="icon-img">
                 <span>RIDES</span>
             </div>
         </div>
