--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
             </span>
         <!--Ride Raters Logo-->
         <div class="welcome-logo">
-            <img src="/media/imgs/logo-nav.png" alt="RideRaters Logo" class="intro-logo-img">
+            <img src="media/imgs/logo-nav.png" alt="RideRaters Logo" class="intro-logo-img">
         </div>
         <!-------------------->
 
