--- a/comparerides.html
+++ b/comparerides.html
@@ -47,7 +47,7 @@
         <header class="app-header">
             <div class="hamburg-logo-div">
                 <i class="fa-solid fa-bars fa-3x hamburg-menu" style="color: #ffffff;"></i>
-                <img src="/media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
+                <img src="media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
             </div>
         </header>
     </div>
@@ -85,7 +85,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -134,7 +134,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -183,7 +183,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -232,7 +232,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -281,7 +281,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -330,7 +330,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -385,17 +385,17 @@
             <div class="rides-compared-div">
                 <div class="ride-compared">
                     <i class="fa-solid fa-circle-xmark"></i>
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="ride-compared-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="ride-compared-img" alt="">
                     <p class="ride-compare-num proxima-semibold">1</p>
                 </div>
                 <div class="ride-compared">
                     <i class="fa-solid fa-circle-xmark"></i>
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="ride-compared-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="ride-compared-img" alt="">
                     <p class="ride-compare-num proxima-semibold">2</p>
                 </div>
                 <div class="ride-compared">
                     <i class="fa-solid fa-circle-xmark"></i>
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="ride-compared-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="ride-compared-img" alt="">
                     <p class="ride-compare-num proxima-semibold">3</p>
                 </div>
             </div>
@@ -414,11 +414,11 @@
                 <span>PROFILE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/compare.png" class="icon-img">
+                <img src="media/imgs/compare.png" class="icon-img">
                 <span>COMPARE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/rides.png" class="icon-img">
+                <img src="media/imgs/rides.png" class="icon-img">
                 <span>RIDES</span>
             </div>
         </div>
