--- a/comparesearch.html
+++ b/comparesearch.html
@@ -18,7 +18,7 @@
         <header class="app-header">
             <div class="hamburg-logo-div">
                 <i class="fa-solid fa-bars fa-3x hamburg-menu" style="color: #ffffff;"></i>
-                <img src="/media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
+                <img src="media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
             </div>
         </header>
     </div>
@@ -57,7 +57,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -106,7 +106,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -155,7 +155,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -204,7 +204,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -253,7 +253,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -302,7 +302,7 @@
             <div class="Search-result-item">
                 <!--Ride Image Div-->
                 <div class="list-ride-img-div">
-                    <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                 </div>
                 <!--Ride Data Div-->
                 <div class="list-ride-data-div">
@@ -371,11 +371,11 @@
                 <span>PROFILE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/compare.png" class="icon-img">
+                <img src="media/imgs/compare.png" class="icon-img">
                 <span>COMPARE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/rides.png" class="icon-img">
+                <img src="media/imgs/rides.png" class="icon-img">
                 <span>RIDES</span>
             </div>
         </div>
