--- a/editlistname.html
+++ b/editlistname.html
@@ -40,7 +40,7 @@
         <header class="app-header">
             <div class="hamburg-logo-div">
                 <i class="fa-solid fa-bars fa-3x hamburg-menu" style="color: #ffffff;"></i>
-                <img src="/media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
+                <img src="media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
             </div>
         </header>
     </div>
@@ -58,7 +58,7 @@
 
     <!--User List Div-->
     <div class="list-img-div">
-        <img src="/media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" class="create-list-img" id="pfp-img" alt="">
+        <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" class="create-list-img" id="pfp-img" alt="">
         <!-- <i class="fa-solid fa-images" id="img-icon"></i> -->
     </div>
 
@@ -93,11 +93,11 @@
                 <span>PROFILE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/compare.png" class="icon-img">
+                <img src="media/imgs/compare.png" class="icon-img">
                 <span>COMPARE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/rides.png" class="icon-img">
+                <img src="media/imgs/rides.png" class="icon-img">
                 <span>RIDES</span>
             </div>
         </div>
