--- a/editprofile.html
+++ b/editprofile.html
@@ -41,7 +41,7 @@
         <header class="app-header">
             <div class="hamburg-logo-div">
                 <i class="fa-solid fa-bars fa-3x hamburg-menu" style="color: #ffffff;"></i>
-                <img src="/media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
+                <img src="media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
             </div>
         </header>
     </div>
@@ -58,7 +58,7 @@
     </div>
     <!--Profile Picture Div-->
     <div class="profile-pic-div">
-        <img src="/media/imgs/profile-pic.jpg" class="profile-pic" id="pfp-img" alt="Profile Picture">
+        <img src="media/imgs/profile-pic.jpg" class="profile-pic" id="pfp-img" alt="Profile Picture">
         <div class="pfp-edit-div fa-stack" id="change-pfp-icon">
             <input type="file" id="pfp-input">
             <i class="fa fa-circle fa-stack-2x" style="color: rgb(255, 255, 255);"></i>
@@ -107,11 +107,11 @@
                 <span>PROFILE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/compare.png" class="icon-img">
+                <img src="media/imgs/compare.png" class="icon-img">
                 <span>COMPARE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/rides.png" class="icon-img">
+                <img src="media/imgs/rides.png" class="icon-img">
                 <span>RIDES</span>
             </div>
         </div>
