--- a/parkpage.html
+++ b/parkpage.html
@@ -39,7 +39,7 @@
         <header class="app-header">
             <div class="hamburg-logo-div">
                 <i class="fa-solid fa-bars fa-3x hamburg-menu" style="color: #ffffff;"></i>
-                <img src="/media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
+                <img src="media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
             </div>
         </header>
     </div>
@@ -59,7 +59,7 @@
 
     <!--Park Ride Image-->
     <div class="park-img-div">
-        <img src="/media/imgs/parks/universal-ioa.jpg" alt="" class="park-page-img">
+        <img src="media/imgs/parks/universal-ioa.jpg" alt="" class="park-page-img">
     </div>
 
     <!--Park Ride Info-->
@@ -122,7 +122,7 @@
                 <div class="user-ride-item">
                     <!--Ride Image Div-->
                     <div class="list-ride-img-div">
-                        <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                        <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                     </div>
                     <!--Ride Data Div-->
                     <div class="list-ride-data-div">
@@ -170,7 +170,7 @@
                 <div class="user-ride-item">
                     <!--Ride Image Div-->
                     <div class="list-ride-img-div">
-                        <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                        <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                     </div>
                     <!--Ride Data Div-->
                     <div class="list-ride-data-div">
@@ -218,7 +218,7 @@
                 <div class="user-ride-item">
                     <!--Ride Image Div-->
                     <div class="list-ride-img-div">
-                        <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                        <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                     </div>
                     <!--Ride Data Div-->
                     <div class="list-ride-data-div">
@@ -266,7 +266,7 @@
                 <div class="user-ride-item">
                     <!--Ride Image Div-->
                     <div class="list-ride-img-div">
-                        <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                        <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                     </div>
                     <!--Ride Data Div-->
                     <div class="list-ride-data-div">
@@ -314,7 +314,7 @@
                 <div class="user-ride-item">
                     <!--Ride Image Div-->
                     <div class="list-ride-img-div">
-                        <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                        <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                     </div>
                     <!--Ride Data Div-->
                     <div class="list-ride-data-div">
@@ -362,7 +362,7 @@
                 <div class="user-ride-item">
                     <!--Ride Image Div-->
                     <div class="list-ride-img-div">
-                        <img src="/media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
+                        <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="list-ride-img" alt="">
                     </div>
                     <!--Ride Data Div-->
                     <div class="list-ride-data-div">
@@ -429,11 +429,11 @@
                 <span>PROFILE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/compare.png" class="icon-img">
+                <img src="media/imgs/compare.png" class="icon-img">
                 <span>COMPARE</span>
             </div>
             <div class="icon-text-container">
-                <img src="/media/imgs/rides.png" class="icon-img">
+                <img src="media/imgs/rides.png" class="icon-img">
                 <span>RIDES</span>
             </div>
         </div>
