--- a/passupdated.html
+++ b/passupdated.html
@@ -19,7 +19,7 @@
     </span>
     <!--Ride Raters Logo-->
     <div class="welcome-logo">
-        <img src="/media/imgs/logo-nav.png" alt="RideRaters Logo" class="intro-logo-img">
+        <img src="media/imgs/logo-nav.png" alt="RideRaters Logo" class="intro-logo-img">
     </div>
     <!-------------------->
 
