--- a/profile.html
+++ b/profile.html
@@ -64,7 +64,7 @@
             <i class="fa-solid fa-arrow-left fa-stack-1x"
                 style="color: rgb(0, 0, 0);font-size: 2em !important;margin-left: 0.12em;"></i>
         </span>
-        <h1 class="review-header">PROFILE</h1>
+        <h1 class="review-header" id="profile-header">PROFILE</h1>
         <button class="edit-profile-btn">
             <i class="fa-solid fa-pen-to-square"></i>
             <p class="edit-prof-txt proxima-semibold">Edit</p>
@@ -80,7 +80,7 @@
     <div class="saved-lists">
         <div class="saved-lists-txt-btn">
             <p class="saved-header proxima-semibold">YOUR SAVED LISTS</p>
-            <button class="edit-list-btn">
+            <button onclick="newList()" class="edit-list-btn" id="create-list-btn">
                 <i class="fa-solid fa-circle-plus"></i>
                 <p class="edit-list-txt  proxima-semibold">New List</p>
             </button>
@@ -117,7 +117,7 @@
     <footer class="app-footer">
         <!--Leave a Review Div-->
         <div class="review-btn-div leave-review-btn">
-            <button onclick="thankYou()" class="contact-btn-lg" ><p>Leave a Ride Review</p><i class="fa-solid fa-circle-plus"></i></button>
+            <button onclick="location.href='review.html'" class="contact-btn-lg" ><p>Leave a Ride Review</p><i class="fa-solid fa-circle-plus"></i></button>
         </div>
         <div class="icon-container">
             <div class="icon-text-container">
