--- a/comparerides.html
+++ b/comparerides.html
@@ -413,8 +413,8 @@
                 <i class="icon fa-solid fa-circle-user"></i>
                 <span>PROFILE</span>
             </div>
-            <div class="icon-text-container">
-                <img src="media/imgs/compare.png" class="icon-img">
+            <div class="icon-text-container icon-color">
+                <img src="media/imgs/compare-blue.png" class="icon-img">
                 <span>COMPARE</span>
             </div>
             <div class="icon-text-container">
