--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
     <div class="content">
         <header class="app-header">
             <div class="hamburg-logo-div">
-                <i class="fa-solid fa-bars fa-3x hamburg-menu" style="color: #4FD4F8;"></i>
+                <i class="fa-solid fa-bars fa-3x hamburg-menu" id="menu-selected" style="color: #4FD4F8;"></i>
                 <img src="media/imgs/logo-nav.png" class="nav-logo" alt="" class="logo" width="100vw" height="auto">
             </div>
         </header>
