Created Rendered Version of Edit Profile Page

--- a/profile.html
+++ b/profile.html
@@ -65,17 +65,20 @@
                 style="color: rgb(0, 0, 0);font-size: 2em !important;margin-left: 0.12em;"></i>
         </span>
         <h1 class="review-header" id="profile-header">PROFILE</h1>
-        <button class="edit-profile-btn">
+        <button onclick="editProfileBtn()" class="edit-profile-btn">
             <i class="fa-solid fa-pen-to-square"></i>
             <p class="edit-prof-txt proxima-semibold">Edit</p>
         </button>
     </div>
+
     <!--Profile Picture-->
     <div class="profile-pic-div">
         <img src="media/imgs/profile-pic.jpg" class="profile-pic" alt="Profile Picture">
     </div>
+
     <!--Username-->
     <p class="username-txt proxima-bold">USERNAME123</p>
+    
     <!--Saved List Div-->
     <div class="saved-lists">
         <div class="saved-lists-txt-btn">
