Added 'Like'&'Dislike' interaction to reviews;

--- a/login.html
+++ b/login.html
@@ -6,10 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/a919c172a1.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/main.css">
+        <script src="js/index.js"></script>
         <title>RideRaters</title>
     </head>
     <body style="background-color:black; color: white;">
-            <span class="fa-stack" style="top:4em; left:1.3em">
+            <span class="fa-stack header-arrow" style="top:4em; left:1.3em">
                 <i class="fa-regular fa-circle fa-stack-2x" style="color: #ffffff;font-size: 3em !important;margin-top: -0.15em;"></i>
                 <i class="fa-solid fa-arrow-left fa-stack-1x" style="color: rgb(255, 255, 255);font-size: 2em !important;margin-left: 0.12em;"></i>
             </span>
