--- a/report.html
+++ b/report.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/a919c172a1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/index.js"></script>
     <script>
         function thankYou() {
             const form = document.getElementById("form-submit");
@@ -79,7 +80,7 @@
             <textarea id="report" class="proxima-regular" name="report" rows="">I think...</textarea>
             <!--Submit Report Div-->
             <div class="submit-btn-div">
-                <button onclick="thankYou()" class="contact-btn-lg" style="width: 100%;padding-left: 0em;padding-right: 0em;">SUBMIT REPORT</button>
+                <button onclick="reportThanks()" class="contact-btn-lg" style="width: 100%;padding-left: 0em;padding-right: 0em;">SUBMIT REPORT</button>
             </div>
         </form>
     </div>
