--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </div>
     <div class="welcome-btns-div">
         <a href="login.html" class="link-button"><button class="login-btn" style="border-color: #87A4FE;">Login</button></a>
-        <a href="home.html" class="link-button"><button class="signup-btn" style="border-color: #EFC94C;">Signup</button></a>
+        <a href="signup.html" class="link-button"><button class="signup-btn" style="border-color: #EFC94C;">Signup</button></a>
         <a href="home.html" class="link-button"><button class="guest-btn" style="border-color: #F5D79C;">Guest</button></a>
     </div>
     <footer>
         <div class="welcome-btm-links proxima-regular" >
-            <a href="home.html" class="link-button"><button>TERMS OF USE</button></a>
-            <a href="home.html" class="link-button"><button>PRIVACY POLICY</button></a>
+            <a href="terms.html" class="link-button"><button>TERMS OF USE</button></a>
+            <a href="privacy.html" class="link-button"><button>PRIVACY POLICY</button></a>
         </div>
     </footer>
 </body>
