--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
         <title>RideRaters</title>
     </head>
     <body style="background-color:black; color: white;">
-            <span class="fa-stack" style="top:4em; left:1.3em">
+            <span class="fa-stack header-arrow" style="top:4em; left:1.3em">
                 <i class="fa-regular fa-circle fa-stack-2x" style="color: #ffffff;font-size: 3em !important;margin-top: -0.15em;"></i>
                 <i class="fa-solid fa-arrow-left fa-stack-1x" style="color: rgb(255, 255, 255);font-size: 2em !important;margin-left: 0.12em;"></i>
             </span>
