--- a/resetpass.html
+++ b/resetpass.html
@@ -7,6 +7,8 @@
         <script src="https://kit.fontawesome.com/a919c172a1.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/main.css">
         <title>RideRaters</title>
+        <script src="js/index.js"></script>
+
     </head>
     <body style="background-color:black; color: white;">
             <span class="fa-stack" style="top:4em; left:1.3em">
@@ -47,7 +49,7 @@
 
                 <!--Update Pass Button Div-->
                 <div class="updatepass-btn-div">
-                        <button class="login-btn-lg">Update Password</button>
+                        <button onclick="resetPass()" class="login-btn-lg">Update Password</button>
                 </div>
                 <!--------------------->
             </form>
