--- a/comparerides.html
+++ b/comparerides.html
@@ -400,7 +400,7 @@
                 </div>
             </div>
             <button onclick="" class="compare-btn">
-                <p>COMPARE</p>
+                <p id="compare-ride-button">COMPARE</p>
             </button>
         </div>
         <!--Bottom Nav Icons-->
