Polished User List Page

--- a/editlist.html
+++ b/editlist.html
@@ -70,7 +70,7 @@
     <!--List Name Div-->
     <div class="list-title-div">
         <p class="user-list-txt proxima-semibold">MY 2025 TRIP</p>
-        <i class="fa-solid fa-pen-to-square"></i>
+        <i class="fa-solid fa-pen-to-square edit-user-list-name"></i>
     </div>
 
     <!--List Rides Div-->
@@ -409,7 +409,7 @@
     <footer class="app-footer">
         <!--Leave a Review Div-->
         <div class="add-ride-btn-div">
-            <button onclick="thankYou()" class="contact-btn-lg">
+            <button onclick="window.location='ridespage.html'" class="contact-btn-lg">
                 <p>ADD RIDE</p><i class="fa-solid fa-circle-plus"></i>
             </button>
         </div>
