Implemented image upload on rendered pages

--- a/editlist.html
+++ b/editlist.html
@@ -8,29 +8,85 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="js/index.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", function () {   
+        // document.addEventListener("DOMContentLoaded", function () {   
             
 
-            const pfpIcon = document.getElementById("change-pfp-icon");
-            const listIcon = document.getElementById("img-icon");
+        //     const pfpIcon = document.getElementById("change-pfp-icon");
+        //     const listIcon = document.getElementById("img-icon");
 
-            // Add a click event listener to the div
-            pfpIcon.addEventListener("click", function (event) {
-                // This colde will run when the div is clicked
+        //     // Add a click event listener to the div
+        //     pfpIcon.addEventListener("click", function (event) {
+        //         // This colde will run when the div is clicked
                 
-                // Select the image element
-                var image = document.getElementById("pfp-img");
-                // Select the input element
-                var input = document.getElementById("pfp-input");
-                // Simulate a click on the input element
-                input.click();
-                // Add a change event listener to the input element
+        //         // Select the image element
+        //         var image = document.getElementById("pfp-img");
+        //         // Select the input element
+        //         var input = document.getElementById("pfp-input");
+        //         // Simulate a click on the input element
+        //         input.click();
+        //         // Add a change event listener to the input element
+        //         input.addEventListener("change", function (event) {
+        //             image.src = URL.createObjectURL(event.target.files[0]);
+        //             listIcon.style.display = "none";
+        //         });
+        //     });
+        // });
+
+document.addEventListener("DOMContentLoaded", function () {
+    const pfpIcon = document.getElementById("change-pfp-icon");
+    const listIcon = document.getElementById("img-icon");
+
+    // Add a click event listener to the div
+    if (pfpIcon) {
+        pfpIcon.addEventListener("click", function (event) {
+            // This code will run when the div is clicked
+
+            // Select the image element
+            var image = document.getElementById("pfp-img");
+            // Select the input element
+            var input = document.getElementById("pfp-input");
+            // Simulate a click on the input element
+            input.click();
+            // Add a change event listener to the input element
+            if (listIcon) {
                 input.addEventListener("change", function (event) {
                     image.src = URL.createObjectURL(event.target.files[0]);
                     listIcon.style.display = "none";
                 });
+            } else {
+                input.addEventListener("change", function (event) {
+                    image.src = URL.createObjectURL(event.target.files[0]);
+                });
+            }
+
+        });
+    } else {
+        console.log("pfp icon is NOTT present");
+    }
+    // Add a click event listener to the div
+
+    if (listIcon) {
+        listIcon.addEventListener("click", function (event) {
+            // This colde will run when the div is clicked
+
+            // Select the image element
+            var image = document.getElementById("pfp-img");
+            // Select the input element
+            var input = document.getElementById("pfp-input");
+            // Simulate a click on the input element
+            input.click();
+            // Add a change event listener to the input element
+            input.addEventListener("change", function (event) {
+                image.src = URL.createObjectURL(event.target.files[0]);
+                listIcon.style.display = "none";
             });
         });
+    } else {
+        console.log("list icon is not present");
+    }
+
+});
+
     </script>
     <title>RideRaters</title>
 </head>
