Fixed User List Event listener with class edit

--- a/profile.html
+++ b/profile.html
@@ -91,27 +91,27 @@
         <div class="user-lists-div">
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST ONE</p>
-                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="user-list-img">
             </div>
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST TWO</p>
-                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="user-list-img">
             </div>
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST THREE</p>
-                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="user-list-img">
             </div>
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST FOUR</p>
-                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="user-list-img">
             </div>
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST FIVE</p>
-                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="user-list-img">
             </div>
             <div class="user-list-item">
                 <p class="list-name proxima-semibold">USER LIST SIX</p>
-                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="list-img">
+                <img src="media/imgs/Rides/ioa-the-incredible-hulk-coaster-universal-barrel-roll-c.jpg" alt="" class="user-list-img">
             </div>
         </div>
     </div>
