Disabled Page Zoom for Mobile

--- a/comparerides.html
+++ b/comparerides.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <script src="https://kit.fontawesome.com/a919c172a1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
     <script src="js/index.js"></script>
@@ -28,7 +28,7 @@
                             window.location.href = 'comparesearch.html';
                         } else {
                             xMark.style.transform = 'rotate(45deg)';
-                            xMark.nextElementSibling.src = '';
+                            xMark.nextElementSibling.src = 'media/imgs/empty-img.png';
                         }
                     });
                 });
@@ -337,7 +337,7 @@
                     <!--Ride Name and Location Div-->
                     <div class="list-ride-info-div">
                         <p class="list-ride-location proxima-semibold">Universal Studios</p>
-                        <p class="list-ride-name proxima-semibold">Despicable Me Minion Mayhem</p>
+                        <p class="list-ride-name proxima-semibold">Last Me Minion Mayhem</p>
                     </div>
                     <!--Ride Ratings Div-->
                     <div class="list-ride-ratings-div">
