--- a/comparerides.html
+++ b/comparerides.html
@@ -65,7 +65,7 @@
 
     <div class="search-bar-div search-results-bar search-compare-page">
         <i class="fa-solid fa-magnifying-glass fa-xl mag-icon"></i>
-        <input type="text" class="search-bar" placeholder="SEARCH...">
+        <input type="text" id="search-for-rides" class="search-bar" placeholder="SEARCH...">
         <i class="fa-solid fa-sliders fa-2x filter-icon"></i>
     </div>
 
@@ -80,6 +80,60 @@
     <div class="search-results-div">
         <!--Search Result Items Div-->
         <div class="search-result-items-div">
+
+            <!-- Container for search results -->
+            <div id="search-results-container"></div>
+            
+            <!-- Template for search result item -->
+            <template id="search-result-template">
+                <div class="Search-result-item">
+                    <!-- Ride Image Div -->
+                    <div class="list-ride-img-div">
+                        <img src="" class="list-ride-img" alt="">
+                    </div>
+                    <!-- Ride Data Div -->
+                    <div class="list-ride-data-div">
+                        <!-- Ride Name and Location Div -->
+                        <div class="list-ride-info-div">
+                            <p class="list-ride-location proxima-semibold"></p>
+                            <p class="list-ride-name proxima-semibold"></p>
+                        </div>
+                        <!-- Ride Ratings Div -->
+                        <div class="list-ride-ratings-div">
+                            <div class="ride-user-rating">
+                                <span class="fa-stack">
+                                    <i class="fa fa-circle fa-stack-2x" style="color: #F4C153;"></i>
+                                    <i class="fas fa-star fa-stack-1x"
+                                        style="color: rgb(255, 255, 255); margin-top: -0.85px; font-size: 0.5rem;"></i>
+                                </span>
+                                <p class="user-rating-txt proxima-regular"></p>
+                            </div>
+                            <div class="ride-access-rating">
+                                <span class="fa-stack">
+                                    <i class="fa fa-circle fa-stack-2x" style="color: rgb(255, 255, 255);"></i>
+                                    <i class="fa-solid fa-universal-access fa-stack-2x" style="color: #739CF9;"></i>
+                                </span>
+                                <p class="access-rating-txt proxima-regular"></p>
+                            </div>
+                        </div>
+                        <!-- Park Location Div -->
+                        <div class="list-ride-location-div">
+                            <i class="fa-solid fa-location-dot" style="color: #FF8B8B;"></i>
+                            <p class="proxima-regular ride-city"></p>
+                        </div>
+                    </div>
+                    <!-- Add Ride to List Div -->
+                    <div class="add-ride-list-btn-div">
+                        <button onclick="addCompare()" class="add-ride-list-btn proxima-semibold"><i class="fa-solid fa-circle-plus"></i>Add Ride</button>
+                    </div>
+                </div>
+            
+                <!--Ride Item Divider-->
+                <hr class="park-ride-hr">
+            </template>
+
+
+
 
             <!--Search Result Item-->
             <div class="Search-result-item">
@@ -385,17 +439,17 @@
             <div class="rides-compared-div">
                 <div class="ride-compared">
                     <i class="fa-solid fa-circle-xmark"></i>
-                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="ride-compared-img" alt="">
+                    <img src="media/imgs/empty-img.png" class="ride-compared-img" alt="">
                     <p class="ride-compare-num proxima-semibold">1</p>
                 </div>
                 <div class="ride-compared">
                     <i class="fa-solid fa-circle-xmark"></i>
-                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="ride-compared-img" alt="">
+                    <img src="media/imgs/empty-img.png" class="ride-compared-img" alt="">
                     <p class="ride-compare-num proxima-semibold">2</p>
                 </div>
                 <div class="ride-compared">
                     <i class="fa-solid fa-circle-xmark"></i>
-                    <img src="media/imgs/Rides/Despicable-Me-Minion-Mayhem.jpg" class="ride-compared-img" alt="">
+                    <img src="media/imgs/empty-img.png" class="ride-compared-img" alt="">
                     <p class="ride-compare-num proxima-semibold">3</p>
                 </div>
             </div>
