--- a/comparerides.html
+++ b/comparerides.html
@@ -465,7 +465,7 @@
                     <p class="ride-compare-num proxima-semibold">3</p>
                 </div>
             </div>
-            <button onclick="" class="compare-btn">
+            <button onclick="ridesAllAdded()" class="compare-btn">
                 <p id="compare-ride-button">COMPARE</p>
             </button>
         </div>
