Implemented Add Ride & Review Btns to Ride Page

--- a/ridepage.html
+++ b/ridepage.html
@@ -353,7 +353,7 @@
 
             <!--Leave a Review Button Div-->
             <div class="review-btn-div leave-review-btn">
-                <button onclick="location.href='review.html'" class="contact-btn-lg">
+                <button class="contact-btn-lg">
                     <p>Leave a Ride Review</p><i class="fa-solid fa-circle-plus"></i>
                 </button>
             </div>
