Fixed: Ride page loading wrong title temporarily

--- a/ridepage.html
+++ b/ridepage.html
@@ -31,7 +31,7 @@
                 style="color: rgb(0, 0, 0);font-size: 2em !important;margin-left: 0.12em;"></i>
         </span>
         <div class="park-ride-title-div">
-            <h1 class="park-ride-page">Gran Fiesta Tour Starring The Three Caballeros</h1>
+            <h1 class="park-ride-page"></h1>
         </div>
     </div>
 
