Design Fix: Removed Sort by ABC & PARK

--- a/searchfilters.html
+++ b/searchfilters.html
@@ -424,10 +424,10 @@
             <p class="sort-by-title-txt">
                 SORT BY
             </p>
-            <div class="sort-by-btn-div">
+            <!-- <div class="sort-by-btn-div">
                 <button class="sort-btn-item">ABC</button>
                 <button class="sort-btn-item">PARK</button>
-            </div>
+            </div> -->
             <div class="sort-by-btn-div">
                 <button class="sort-btn-item">USER RATING</button>
                 <button id="rating" class="sort-btn-item">ACCESS RATING</button>
