Found Misspeling in park name

--- a/parkspage.html
+++ b/parkspage.html
@@ -125,7 +125,7 @@
                 <div class="parks-ride-data-div">
                     <!--Ride Name and Location Div-->
                     <div class="parks-list-item-name">
-                        <p class="parks-item-location proxima-semibold">Universal's Island of Adventure</p>
+                        <p class="parks-item-location proxima-semibold">Universal's Islands of Adventure</p>
                     </div>
                     <!--Ride Ratings Div-->
                     <div class="parks-list-item-ratings-div">
