Feature Edit: Removed Park Page Filters

--- a/parkspage.html
+++ b/parkspage.html
@@ -36,7 +36,7 @@
     <div class="search-bar-div">
         <i class="fa-solid fa-magnifying-glass fa-xl mag-icon"></i>
         <input type="text" id="search-for-parks" class="search-bar" placeholder="SEARCH...">
-        <i class="fa-solid fa-sliders fa-2x filter-icon"></i>
+        <i class="fa-solid fa-sliders fa-2x filter-icon filter-parks-icon"></i>
     </div>
 
     <!--Parks Lists Div-->
@@ -44,8 +44,6 @@
         <!--Park Rides Div-->
         <div class="parks-div">
     
-
-
         <!-- Container for search results -->
             <div id="search-results-container"></div>
 
